fix: many fixes

--- a/.env
+++ b/.env
@@ -22,7 +22,7 @@ DB_PASSWD="secret"
 
 
 # BASIC PATH
-APP_PATH="/var/www/html"
+APP_PATH="C:/Users/devje/Desktop/projects-php/Vellum-PHP"
 ASSETS_IMAGES_PATH="${APP_PATH}/public/images"
 
 # BASIC URL
