feat: store a book

--- a/.env
+++ b/.env
@@ -15,10 +15,10 @@ TIMEZONE_DEFAULT="America/Sao_Paulo"
 
 # database configs
 DB_TYPE="mysql"
-DB_HOST="db"
-DB_BASE="vellum"
+DB_HOST="127.0.0.1"
+DB_BASE="my_library"
 DB_USER="root"
-DB_PASSWD="secret"
+DB_PASSWD="my_apps_passwd"
 
 
 # BASIC PATH
